# gadget-tools

./: .editorconfig  .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/gadget_tools/: __init__.py
src/gadget_tools/cli/: __init__.py  main.py
src/gadget_tools/gadget/: cli.py  snapshot.py
src/gadget_tools/io/: __init__.py
src/sims_toolkit/: __init__.py
src/sims_toolkit/gadget/: __init__.py  cli.py  reader.py  snapshot.py
tests/gadget_tools/: test_gadget_snapshot.py
tests/sims_toolkit/: test_gadget.py  test_gadget_legacy.py  test_gadget_snapshot.py
