[tool.poetry]
name = "gadget-tools"
version = "0.2.0"
description = "A library for handling GADGET-2 snapshot files."
readme = "README.md"
authors = [
  "Mariana Jaber <mariana.ifunam@gmail.com>",
  "Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"
]
license = "Apache-2.0"
homepage = "https://github.com/Gadget-Tools"
repository = "https://github.com/Gadget-Tools"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]

packages = [
  { include = "gadget_tools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
click = "^7.0"
attrs = "^19.3.0"
python-dotenv = "^0.12.0"
colored = "^1.4.2"
tabulate = "^0.8.7"
pendulum = "^2.1.0"
tqdm = "^4.46.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
mkdocs = "^1.1.2"

[tool.poetry.scripts]
gadget-tools = "gadget_tools.gadget.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
